update test for controller and MqService